<resources>
  <string name="app_name">Calculator</string>
  <string name="tv_result">Result</string>
  <string name="ed_n1">N1</string>
  <string name="ed_n2">N2</string>
  <string name="btn_sum">Do Sum</string>
</resources>
